Fixed Z-Index of image

--- a/dependencies/kiosk.css
+++ b/dependencies/kiosk.css
@@ -4,4 +4,5 @@
     left: calc(50% - 64px);
     transition: all 0.5s;
     opacity: 1;
+    z-index: 10;
 }
